@@ -1,0 +1,53 @@
+\documentclass[a4paper,russian]{article}
+% generated by Docutils <http://docutils.sourceforge.net/>
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in Acrobat
+\usepackage{ifthen}
+\usepackage[english,russian]{babel}
+\usepackage[T1,T2A]{fontenc}
+\usepackage[utf8]{inputenc}
+
+%%% Custom LaTeX preamble
+% PDF Standard Fonts
+\usepackage{mathptmx} % Times
+\usepackage[scaled=.90]{helvet}
+\usepackage{courier}
+
+%%% User specified packages and stylesheets
+\usepackage{cmlgc}
+
+%%% Fallback definitions for Docutils-specific commands
+
+% hyperlinks:
+\ifthenelse{\isundefined{\hypersetup}}{
+  \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,unicode]{hyperref}
+  \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
+}{}
+
+
+%%% Body
+\begin{document}
+
+
+%___________________________________________________________________________
+
+\section*{Заголовок%
+  \phantomsection%
+  \addcontentsline{toc}{section}{Заголовок}%
+  \label{id1}%
+}
+
+первый пример: \glqq{}Здравствуй, мир!\grqq{}
+
+
+%___________________________________________________________________________
+
+\section*{Title%
+  \phantomsection%
+  \addcontentsline{toc}{section}{Title}%
+  \label{title}%
+}
+
+{\selectlanguage{english}first example: \glqq{}Hello world\grqq{}.}
+
+\end{document}
