@@ -1,0 +1,53 @@
+\documentclass[a4paper,russian]{article}
+% generated by Docutils <http://docutils.sourceforge.net/>
+% rubber: set program xelatex
+\usepackage[no-sscript]{xltxtra} % loads fixltx2e, metalogo, xunicode, fontspec
+\defaultfontfeatures{Scale=MatchLowercase}
+\usepackage{ifthen}
+\usepackage{polyglossia}
+\setdefaultlanguage{russian}
+\setotherlanguages{english}
+
+%%% Custom LaTeX preamble
+% Linux Libertine (free, wide coverage, not only for Linux
+\setmainfont{Linux Libertine O}
+\setsansfont{Linux Biolinum O}
+\setmonofont[HyphenChar=None]{DejaVu Sans Mono}
+
+%%% User specified packages and stylesheets
+
+%%% Fallback definitions for Docutils-specific commands
+
+% hyperlinks:
+\ifthenelse{\isundefined{\hypersetup}}{
+  \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
+  \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
+}{}
+
+
+%%% Body
+\begin{document}
+
+
+%___________________________________________________________________________
+
+\section*{Заголовок%
+  \phantomsection%
+  \addcontentsline{toc}{section}{Заголовок}%
+  \label{id1}%
+}
+
+первый пример: "Здравствуй, мир!"
+
+
+%___________________________________________________________________________
+
+\section*{Title%
+  \phantomsection%
+  \addcontentsline{toc}{section}{Title}%
+  \label{title}%
+}
+
+{\selectlanguage{english}first example: "Hello world".}
+
+\end{document}
